# controllers/admin.go
@@ -119,3 +119,51 @@ func (o *AdminController) PushInterestCategories() {
 	}
 	res = "ok"
 }
+
+// @Title PushInterestCategoriesV2
+// @Description Push interest categories to database
+// @Success 200 {object} models.AuthenticationResponse
+// @Failure 400 {object} models.ResponseWithError
+// @router /interest_categories/v2 [put]
+func (o *AdminController) PushInterestCategoriesV2() {
+	var res models.Response
+	defer func() {
+		o.Data["json"] = res
+		o.ServeJSON()
+	}()
+
+	ctx := databases.Context
+	categoryCollection := models.GetCategoryCollection()
+	for _, cat := range models.GetCategories() {
+		var err error
+		var catRef *firestore.DocumentRef
+		catSnapshot, err := categoryCollection.Where("slug", "==", cat.Slug).Documents(ctx).Next()
+		if err != nil {
+			// If category doesn't exists, add it
+			catRef = categoryCollection.Doc(cat.Slug)
+			_, err = categoryCollection.Doc(cat.Slug).Set(ctx, cat.ToFirestoreCategory(nil))
+			if err != nil {
+				logs.Error("Add: Couldn't add new category:", err)
+				return
+			}
+		} else {
+			catRef = catSnapshot.Ref
+		}
+
+		for _, subCat := range cat.SubCategories {
+			subId := cat.Slug + "-" + subCat.Slug
+			subSlug := cat.Slug + "/" + subCat.Slug
+			_, err := categoryCollection.Where("slug", "==", subSlug).Documents(ctx).Next()
+			if err != nil {
+				// Category doesn't exists in remote list, add it
+				_, err := categoryCollection.Doc(subId).Set(ctx, subCat.ToFirestoreCategory(catRef))
+				if err != nil {
+					logs.Error("Add: Couldn't add new sub category:", err)
+					return
+				}
+			}
+		}
+	}
+
+	res = "ok"
+}
